Fix pager button CSS on mobile devices

--- a/app/assets/stylesheets/css/pagination.css
+++ b/app/assets/stylesheets/css/pagination.css
@@ -101,3 +101,11 @@
     }
   }
 }
+
+/* Media queries for mobile devices */
+@media (max-width: 640px) {
+  .pagy.nav a,
+  .pagy.nav span {
+    @apply px-2 py-1 text-xs;
+  }
+}
